# turingmachinetranspiler

./: LICENSE  pyproject.toml
.github/workflows/: test-package.yml
src/turingmachinetranspiler/: __main__.py  valid.py
tests/: example.tm  invalid_example.tm  test_so_ci_wont_break.py
turingmachinetranspiler/: __init__.py  __main__.py  process.py  valid.py
